# gkcc

./: .drone.yml  .gitignore  CMakeLists.txt  Makefile  README.md  clang-format.sh  count_lines.sh  current-test.c  notes.md
.builds/: test.yml
lexical/: .gitignore  Makefile  TODO.md  a.out  c.l  c.lex  lex.yy.c  lex.yy.h  lex_extras.h  lextester  op.l  quicktest.c  test.c
lexical/ltests/: .gitignore
parser/: .gitignore  Makefile  c.y
src/: Makefile  gkcc  gkcc.c  gkcc_int.c
src/ast/: Makefile  ast.c  ast.h  ast_constructors.c  ast_constructors.h  types.c  types.h
src/ir/: basic_block.c  basic_block.h  ir_base.h  ir_full.c  ir_full.h  quads.c  quads.h  translators.c  translators.h
src/lexical/: Makefile  c.lex  lex_extras.h  test.c
src/misc/: misc.c  misc.h
src/parser/: .gitignore  Makefile  all_ast_nodes.sh  c.y  parsetester.c  parsetester.h  test.c
src/scope/: scope.c  scope.h  scope_helpers.c  scope_helpers.h
src/target_code/: x86.c  x86.h  x86_inst.c  x86_inst.h
tests/: simple.c
